--- a/css/main.css
+++ b/css/main.css
@@ -838,8 +838,12 @@ a:hover, a:focus {
   color: #ffffff;
 }
 
-.header-logo {
-  margin-right: 93px;
+@media screen and (min-width: 768px) {
+  .header-logo {
+    padding-top: 26px;
+    padding-bottom: 26px;
+    margin-right: 88px;
+  }
 }
 
 /* projects  элементы списка*/
@@ -1144,6 +1148,13 @@ a:hover, a:focus {
   }
 }
 
+@media screen and (min-width: 768px) {
+  .header {
+    padding-bottom: 0;
+    padding-top: 0;
+  }
+}
+
 .menu-button {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
@@ -1175,14 +1186,14 @@ a:hover, a:focus {
 .menu-container {
   background-color: #ffffff;
   font-size: 20px;
-  padding-top: 60px;
-  padding-bottom: 60px;
 }
 
 @media screen and (max-width: 767px) {
   .menu-container {
     display: none;
     border-top: 1px solid #ececec;
+    padding-bottom: 60px;
+    padding-top: 60px;
     position: absolute;
     top: 100%;
     left: 0;
@@ -1191,19 +1202,17 @@ a:hover, a:focus {
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1199px) {
+@media screen and (min-width: 768px) {
   .menu-container {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .menu-container {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
   }
 }
 
@@ -1240,28 +1249,26 @@ a:hover, a:focus {
         -ms-flex-align: center;
             align-items: center;
     margin-bottom: 60px;
+    font-family: "Roboto";
+    font-style: normal;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.02em;
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1199px) {
+@media screen and (min-width: 768px) {
   .site-nav.list {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .site-nav.list {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    font-size: 14px;
   }
 }
 
@@ -1285,15 +1292,12 @@ a:hover, a:focus {
   position: relative;
 }
 
-@media screen and (min-width: 768px) and (max-width: 1199px) {
-  .site-nav .link {
+@media screen and (min-width: 768px) {
+  .site-nav .item {
     margin-right: 50px;
   }
-}
-
-@media screen and (min-width: 1200px) {
-  .site-nav .link:last-child {
-    margin-right: 50px;
+  .site-nav .item:last-child {
+    margin-right: 0;
   }
 }
 
@@ -1306,12 +1310,18 @@ a:hover, a:focus {
   content: "";
   position: absolute;
   left: 0;
-  bottom: -8px;
+  bottom: -12px;
   display: block;
   width: 100%;
   height: 4px;
   background-color: #2196f3;
   border-radius: 2px;
+}
+
+@media screen and (min-width: 768px) {
+  .site-nav .current::after {
+    bottom: -34px;
+  }
 }
 
 .item:last-child {
@@ -1340,6 +1350,18 @@ a:hover, a:focus {
 @media screen and (max-width: 767px) {
   .item.envelope {
     margin-bottom: 16px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .item.envelope {
+    margin-bottom: 10px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .item.envelope {
+    margin-right: 30px;
   }
 }
 
@@ -1373,6 +1395,23 @@ a:hover, a:focus {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .auth-nav {
+    font-size: 12px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .auth-nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
@@ -1756,9 +1795,6 @@ a:hover, a:focus {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
     padding-left: 76px;
@@ -1823,6 +1859,12 @@ a:hover, a:focus {
 @media screen and (min-width: 1200px) {
   .footer-input {
     width: 358px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .footer-block {
+    margin-bottom: 60px;
   }
 }
 
@@ -1904,7 +1946,7 @@ a:hover, a:focus {
   background-color: #2196f3;
 }
 
-@media screen and (max-width: 1199px) {
+@media screen and (max-width: 767px) {
   .footer-social {
     margin-top: 60px;
     margin-bottom: 60px;
