--- a/css/main.css
+++ b/css/main.css
@@ -846,9 +846,12 @@ a:hover, a:focus {
   }
 }
 
-/* projects  элементы списка*/
-/* projects */
-.projects {
+.projects-container {
+  border-top: 1px solid #ececec;
+}
+
+.buttons {
+  margin-bottom: 40px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -856,107 +859,239 @@ a:hover, a:focus {
       flex-wrap: wrap;
 }
 
-.projects-list {
-  display: block;
-  width: 370px;
-  margin-right: 30px;
-  margin-bottom: 30px;
+@media screen and (min-width: 768px) {
+  .buttons {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin-bottom: 56px;
+  }
 }
 
-.projects-div {
-  padding: 20px 24px;
-  border-left: 1px solid #eeeeee;
+@media screen and (min-width: 1200px) {
+  .buttons {
+    margin-bottom: 50px;
+  }
+}
+
+.btn {
+  display: inline-block;
+  padding: 6px 22px;
+  min-width: 73px;
+  border-radius: 4px;
+  cursor: pointer;
+  color: #212121;
+  background-color: #f5f4fa;
+  font-weight: 500;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  line-height: 1.63;
+  text-align: center;
+  border: 1px solid transparent;
+}
+
+.btn:hover, .btn:focus {
+  color: #ffffff;
+  background-color: #2196f3;
+  -webkit-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+          box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.buttons li {
+  margin-bottom: 10px;
+}
+
+.buttons li:last-child {
+  margin-bottom: 0;
+}
+
+@media screen and (max-width: 479px) {
+  .buttons li {
+    margin-right: 8px;
+  }
+}
+
+@media screen and (min-width: 480px) {
+  .buttons li {
+    margin-bottom: 30px;
+  }
+  .buttons li:nth-child(n + 4) {
+    margin-bottom: 0;
+  }
+  .buttons li:not(:last-child) {
+    margin-right: 8px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .buttons li {
+    margin-bottom: 0;
+  }
+}
+
+.projects {
+  display: block;
+}
+
+@media screen and (min-width: 768px) {
+  .projects {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .projects {
+    margin: -15px;
+  }
+}
+
+.project-card {
+  width: 100%;
+  margin-bottom: 10px;
+}
+
+.project-card:last-child {
+  margin-bottom: 0;
+}
+
+@media screen and (min-width: 480px) and (max-width: 767px) {
+  .project-card {
+    margin-bottom: 30px;
+    width: 450px;
+  }
+  .project-card:last-child {
+    margin-bottom: 0;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .project-card {
+    width: 354px;
+    margin-right: 30px;
+  }
+  .project-card:nth-child(2n) {
+    margin-right: 0;
+  }
+  .project-card:last-child {
+    margin-bottom: 0;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .project-card {
+    width: 370px;
+    margin: 15px;
+  }
+}
+
+.project-info {
   border-right: 1px solid #eeeeee;
   border-bottom: 1px solid #eeeeee;
+  border-left: 1px solid #eeeeee;
 }
 
-.projects-overlay {
-  position: relative;
-  overflow: hidden;
-  height: 294px;
-}
-
-.projects-text {
-  display: inline-block;
+.project-overlay {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #2196f3;
+  opacity: 0;
+  -webkit-transform: translateY(100%);
+          transform: translateY(100%);
+  -webkit-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.description-text {
+  position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 63px 24px;
+  opacity: 0;
+  -webkit-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms;
   font-size: 18px;
   line-height: 1.56;
   letter-spacing: 0.03em;
-  padding: 63px 24px;
   color: #ffffff;
-  bottom: 0;
-  left: 0;
-  -webkit-transform: translateY(100%);
-          transform: translateY(100%);
-  background-color: rgba(33, 150, 243, 0.9);
-  -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.projects .title {
-  font-family: "Roboto", sans-serif;
+.project-link {
+  display: block;
+  width: 100%;
+}
+
+.project-link:hover, .project-link:focus {
+  -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+          box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+  -webkit-transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.project-link:hover .project-overlay,
+.project-link:focus .project-overlay {
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+  opacity: 1;
+}
+
+.project-link:hover .description-text,
+.project-link:focus .description-text {
+  opacity: 1;
+}
+
+.project-thumb {
+  position: relative;
+  overflow: hidden;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.project-thumb:hover::before, .project-thumb:focus::before {
+  opacity: 1;
+}
+
+.project-title {
+  padding-top: 20px;
+  margin-bottom: 4px;
+  margin-left: 24px;
+  color: #212121;
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
-  padding-bottom: 4px;
 }
 
-.projects .portfolio-jobs {
-  font-size: 16px;
-  line-height: 1.87;
-  letter-spacing: 0.03em;
+.project-text {
+  margin-left: 24px;
+  padding-bottom: 20px;
   color: #757575;
+  font-size: 16px;
+  line-height: 1.88;
 }
 
-.projects-list .projects-link {
-  display: block;
-}
-
-.projects-list .projects-link:hover, .projects-list .projects-link:focus {
-  -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-          box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-  -webkit-transition-duration: 250ms;
-          transition-duration: 250ms;
-  -webkit-transition-delay: cubic-bezier(0.4, 0, 0.2, 1);
-          transition-delay: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.projects-list:nth-last-child(-n + 3) {
-  margin-bottom: 0;
-}
-
-.projects-list:nth-child(3n) {
-  margin-right: 0;
-}
-
-.projects-link:hover .projects-text,
-.projects-link:focus .projects-text {
-  -webkit-transform: translateY(0);
-          transform: translateY(0);
-  -webkit-transition-duration: 250ms;
-          transition-duration: 250ms;
-  -webkit-transition-delay: cubic-bezier(0.4, 0, 0.2, 1);
-          transition-delay: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-/* calc((100% - кол-во маржинов в строке*значение маржина)/кол-во элементов в строке */
-/* .projects .item {
-     width: calc((100%-60px) / 3);
-     margin-right: 30px;
-   }
-   .projects .item:nth-child(3n) {
-     margin-right: 0;
-   } */
-/* альтернатива
-   .projects .item:not(:nth-child(3n)) {
-     margin-right: 30px;
-   }
-   .projects .item:not(:nth-last-child(-n + 3)) {
-     margin-bottom: 30px;
-   } */
 /* social  */
 .social-icon {
   display: block;
@@ -1012,10 +1147,6 @@ a:hover, a:focus {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  padding-bottom: 50px;
 }
 
 @media screen and (min-width: 768px) {
@@ -1814,6 +1945,8 @@ a:hover, a:focus {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+    padding-top: 60px;
+    padding-bottom: 60px;
   }
 }
 
