--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -2,8 +2,8 @@
 // под девайсы 768px и 1200px
 .buttons {
   display: flex;
-  justify-content: center;
-  padding-bottom: 50px;
+  // justify-content: center;
+  // padding-bottom: 50px;
 
   @media screen and (min-width: 768px) {
     display: flex;
