--- a/sass/components/_page-footer.scss
+++ b/sass/components/_page-footer.scss
@@ -63,6 +63,8 @@
     text-align: start;
     justify-content: space-between;
     align-items: center;
+    padding-top: 60px;
+    padding-bottom: 60px;
   }
 }
 .logo-div {
