--- a/sass/components/_projects.scss
+++ b/sass/components/_projects.scss
@@ -1,114 +1,188 @@
-/* projects  элементы списка*/
-
-/* projects */
-.projects {
+.projects-container {
+  border-top: 1px solid #ececec;
+}
+.buttons {
+  margin-bottom: 40px;
   display: flex;
   flex-wrap: wrap;
 
-  &-list {
-    display: block;
-    width: 370px;
-    margin-right: 30px;
-    margin-bottom: 30px;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 56px;
   }
-
-  &-div {
-    padding: 20px 24px;
-    border-left: 1px solid $portfolio-item;
-    border-right: 1px solid $portfolio-item;
-    border-bottom: 1px solid $portfolio-item;
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 50px;
   }
+}
+.btn {
+  display: inline-block;
+  padding: 6px 22px;
+  min-width: 73px;
+  border-radius: 4px;
+  cursor: pointer;
 
-  &-overlay {
-    position: relative;
-    overflow: hidden;
-    height: 294px;
-  }
+  color: $title-text-color;
+  background-color: $bcg-our-team;
+  font-weight: 500;
+  font-family: $main-font, sans-serif;
+  font-size: 16px;
+  line-height: 1.63;
+  text-align: center;
+  border: 1px solid transparent;
 
-  &-text {
-    display: inline-block;
-    position: absolute;
-
-    // font-family: $main-font, sans-serif;
-    // font-weight: 400;
-    font-size: 18px;
-    line-height: 1.56;
-    letter-spacing: 0.03em;
-    padding: 63px 24px;
+  &:hover,
+  &:focus {
     color: $white-color;
-
-    bottom: 0;
-    left: 0;
-    transform: translateY(100%);
-    background-color: rgba(33, 150, 243, 0.9);
-    transition: transform 250ms $timing-function;
+    background-color: $accent-color;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+      0px 2px 2px rgba(0, 0, 0, 0.12);
+    transition: color 250ms $timing-function,
+      background-color 250ms $timing-function, box-shadow 250ms $timing-function;
   }
-
-  & .title {
-    font-family: $main-font, sans-serif;
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 2;
-    letter-spacing: 0.06em;
-    padding-bottom: 4px;
+}
+.buttons li {
+  margin-bottom: 10px;
+  &:last-child {
+    margin-bottom: 0;
   }
+  @media screen and (max-width: 479px) {
+    margin-right: 8px;
+  }
+  @media screen and (min-width: 480px) {
+    margin-bottom: 30px;
 
-  & .portfolio-jobs {
-    // font-family: $main-font, sans-serif;
-    // font-weight: 400;
-    font-size: 16px;
-    line-height: 1.87;
-    letter-spacing: 0.03em;
-    color: $primary-text-color;
+    &:nth-child(n + 4) {
+      margin-bottom: 0;
+    }
+    &:not(:last-child) {
+      margin-right: 8px;
+    }
+  }
+  @media screen and (min-width: 768px) {
+    margin-bottom: 0;
   }
 }
 
-.projects-list .projects-link {
+.projects {
   display: block;
+
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  @media screen and (min-width: 1200px) {
+    margin: -15px;
+  }
+}
+.project-card {
+  width: 100%;
+  margin-bottom: 10px;
+  &:last-child {
+    margin-bottom: 0;
+  }
+  @media screen and (min-width: 480px) and (max-width: 767px) {
+    margin-bottom: 30px;
+    width: 450px;
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    width: 354px;
+    margin-right: 30px;
+    &:nth-child(2n) {
+      margin-right: 0;
+    }
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+  @media screen and (min-width: 1200px) {
+    width: 370px;
+    margin: 15px;
+  }
+}
+.project-info {
+  border-right: 1px solid $portfolio-item;
+  border-bottom: 1px solid $portfolio-item;
+  border-left: 1px solid $portfolio-item;
+}
+.project-overlay {
+  display: flex;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: $accent-color;
+
+  opacity: 0;
+  transform: translateY(100%);
+
+  transition: transform 250ms $timing-function, opacity 250ms $timing-function;
+}
+.description-text {
+  position: absolute;
+  display: flex;
+  padding: 63px 24px;
+
+  opacity: 0;
+  transition: opacity 250ms $timing-function 250ms;
+  font-size: 18px;
+  line-height: 1.56;
+  letter-spacing: 0.03em;
+  color: $white-color;
+}
+.project-link {
+  display: block;
+  width: 100%;
 
   &:hover,
   &:focus {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
       1px 4px 6px rgba(0, 0, 0, 0.16);
+    transition: box-shadow 250ms $timing-function;
+  }
 
-    transition-duration: 250ms;
-    transition-delay: $timing-function;
+  &:hover .project-overlay,
+  &:focus .project-overlay {
+    transform: translateY(0);
+    opacity: 1;
+  }
+  &:hover .description-text,
+  &:focus .description-text {
+    opacity: 1;
   }
 }
 
-.projects-list:nth-last-child(-n + 3) {
-  margin-bottom: 0;
+.project-thumb {
+  position: relative;
+  overflow: hidden;
+  display: flex;
+
+  &:hover::before,
+  &:focus::before {
+    opacity: 1;
+  }
 }
+.project-title {
+  padding-top: 20px;
+  margin-bottom: 4px;
+  margin-left: 24px;
 
-.projects-list:nth-child(3n) {
-  margin-right: 0;
+  color: $title-text-color;
+
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
 }
+.project-text {
+  margin-left: 24px;
+  padding-bottom: 20px;
 
-// .overlay {
-//   position: relative;
-// }
-
-.projects-link:hover .projects-text,
-.projects-link:focus .projects-text {
-  transform: translateY(0);
-
-  transition-duration: 250ms;
-  transition-delay: $timing-function;
+  color: $primary-text-color;
+  font-size: 16px;
+  line-height: 1.88;
 }
-
-/* calc((100% - кол-во маржинов в строке*значение маржина)/кол-во элементов в строке */
-/* .projects .item {
-     width: calc((100%-60px) / 3);
-     margin-right: 30px;
-   }
-   .projects .item:nth-child(3n) {
-     margin-right: 0;
-   } */
-
-/* альтернатива
-   .projects .item:not(:nth-child(3n)) {
-     margin-right: 30px;
-   }
-   .projects .item:not(:nth-last-child(-n + 3)) {
-     margin-bottom: 30px;
-   } */
