--- a/sass/components/_projects.scss
+++ b/sass/components/_projects.scss
@@ -75,6 +75,11 @@
     margin: -15px;
   }
 }
+.project-thumb img {
+  display: block;
+  width: 100%;
+}
+
 .project-card {
   width: 100%;
   margin-bottom: 10px;
