--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -4,7 +4,7 @@
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
-  outline: 1px solid tomato;
+  // outline: 1px solid tomato;
   padding-top: 60px;
   padding-bottom: 60px;
 
