--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -2,6 +2,7 @@
 .header {
   background-color: #fff;
   position: relative;
+  z-index: 1;
 
   @media screen and (max-width: 767px) {
     padding-bottom: 16px;
