--- a/css/main.css
+++ b/css/main.css
@@ -1233,15 +1233,9 @@ a:hover, a:focus {
 
 .btn-footer {
   margin-top: 20px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
   color: #ffffff;
   background-color: #2196f3;
   border-radius: 4px;
@@ -2008,25 +2002,7 @@ a:hover, a:focus {
 
 .footer-distribution {
   position: relative;
-  display: inline-block;
-}
-
-@media screen and (max-width: 767px) {
-  .footer-distribution {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-  }
+  display: block;
 }
 
 @media screen and (min-width: 767px) and (max-width: 1199px) {
