--- a/sass/components/_page-footer.scss
+++ b/sass/components/_page-footer.scss
@@ -97,6 +97,7 @@
   padding: 15px 16px;
 
   @media screen and (max-width: 479px) {
+    // width: calc(100% - 30px);
     width: 100%;
   }
 
@@ -112,15 +113,15 @@
 }
 .footer-distribution {
   position: relative;
-  display: inline-block;
+  display: block;
   // align-items: center;
 
-  @media screen and (max-width: 767px) {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
+  // @media screen and (max-width: 767px) {
+  //   display: flex;
+  //   flex-direction: column;
+  //   align-items: center;
+  //   justify-content: center;
+  // }
 
   @media screen and (min-width: 767px) and (max-width: 1199px) {
     display: flex;
