--- a/css/main.css
+++ b/css/main.css
@@ -678,6 +678,7 @@ a:hover, a:focus {
   display: inline-block;
   top: -16px;
   left: 0;
+  color: #757575;
   font-size: 12px;
   line-height: 1.16;
   letter-spacing: 0.01em;
@@ -706,6 +707,10 @@ a:hover, a:focus {
   -webkit-transition-delay: cubic-bezier(0.4, 0, 0.2, 1);
           transition-delay: cubic-bezier(0.4, 0, 0.2, 1);
   fill: #2196f3;
+}
+
+.check-text {
+  width: 100%;
 }
 
 /* .form-input:focus + .form-label,
@@ -1922,6 +1927,9 @@ a:hover, a:focus {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
@@ -2154,8 +2162,8 @@ a:hover, a:focus {
   border: 1px solid #afb1b8;
   border-radius: 4px;
   fill: #afb1b8;
-  -webkit-transition: fill 2500ms cubic-bezier(0.4, 0, 0.2, 1), border 2500ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: fill 2500ms cubic-bezier(0.4, 0, 0.2, 1), border 2500ms cubic-bezier(0.4, 0, 0.2, 1);
+  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .client-link:hover, .client-link:focus {
