--- a/sass/components/_page-footer.scss
+++ b/sass/components/_page-footer.scss
@@ -52,6 +52,7 @@
   // }
   @media screen and (min-width: 768px) and (max-width: 1199px) {
     display: flex;
+    align-items: baseline;
     justify-content: space-between;
     flex-wrap: wrap;
     padding-left: 76px;
